--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,2 @@
-runtime: python39
-
-entrypoint: streamlit run streamlit_app.py --server.enableCORS false --browser.serverAddress 0.0.0.0 --browser.gatherUsageStats false --server.port 8080
+runtime: custom
+env: flex
